objects/Award_Provider__c.object
<CustomObject>
    <description>Provider of the Award</description>
    <fields>
        <fullName>Award_and_Compliment__c</fullName>
        <label>Award and Compliment</label>
        <referenceTo>Awards_and_Compliments__c</referenceTo>
        <relationshipName>Award_and_Compliment_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <formula>Contact__r.Title &amp;&quot;,  &quot;&amp;  Contact__r.Account.Name &amp;&quot;, &quot;&amp; Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the Contact Providing Feedback. If the Contact does not exist, then Create the Contact and select the person.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Award_and_Compliment_Awards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Award Provider</label>
    <nameField>
        <displayFormat>AWD-{YYMM}{000}</displayFormat>
        <label>AWD Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>